src/test/ui/default-ty-param-fallback/future_proof.stderr
error[E0282]: type annotations needed
  --> $DIR/future_proof.rs:25:5
   |
25 |     func(noner());
   |     ^^^^ cannot infer type for `P`

error: aborting due to previous error

